--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,8 @@
 html{
-	/*	border: 0;*/
 	font-family: 'Merriweather', serif;
-	font-size: 100%;
-	margin: 0;
-	outline: 0;
-	padding: 0;
-	vertical-align: baseline;
-	min-height: 100%;
 	background-color: white;
 	-webkit-font-smoothing: antialiased;
+	height: 100%;
 }
 
 body{
@@ -17,6 +11,10 @@ body{
 	font-family: 'Merriweather', Georgia, serif;
 	font-weight: 300;
 	line-height: 1.5;
+
+	display: flex;
+  	flex-direction: column;
+  	height: 100vh; /* Avoid the IE 10-11 `min-height` bug. */
 }
 .hi{
 	font-size: 1.75rem;
@@ -37,17 +35,16 @@ body{
 }
 
 main{
-	margin-top:2em; 
+	flex: 1 0 auto; /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
+    padding: 20px;
 }
 footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 50px;
-  line-height: 50px;
   background-color: #C62E65;
   font-size: 0.75rem;
   color:white;
+
+  flex-shrink: 0; /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
+  padding: 20px;
 
 }
 /*#D81159*/
